# fall2022

./: .gitignore  CMakeLists.txt  main.cpp  notes.md  oldCode.cpp  tmpMain.cpp
code/: utils.cpp  utils.h
code/code/: Cell.cpp  Game.cpp  Out.cpp  Result.cpp
code/headers/: Cell.h  Game.h  Out.h  Result.h
